# OnChainSubscriptionManager_Solana

./: Readme.Md
Backend/: .env  Cargo.toml
Backend/src/: JWT_secret_key.rs  main.rs  middlewares.rs
backend/: .gitignore  Cargo.toml
backend/src/: main.rs  middlewares.rs
on-chain-subscription-manager/: .gitignore  Anchor.toml  package-lock.json  package.json
on-chain-subscription-manager/programs/on-chain-subscription-manager/: Cargo.toml
on-chain-subscription-manager/programs/on-chain-subscription-manager/src/: lib.rs
on-chain-subscription-manager/tests/: on-chain-subscription-manager.ts
onchainsubscription-manager/: .env  Anchor.toml  test-keypair.json  treasury.json  tx.txt
onchainsubscription-manager/programs/onchainsubscription-manager/: Cargo.toml
onchainsubscription-manager/programs/onchainsubscription-manager/src/: lib.rs
onchainsubscription-manager/tests/: onchainsubscription-manager.ts  treasury-keypair.json
