[package]
name = "Backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"        
solana-client = "1.18"
solana-sdk = "1.18.26"
base64 = "0.22"
jsonwebtoken = "9"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
borsh = "0.10"
bs58 = "0.5"
bincode = "1.3"           
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
futures = "0.3"
futures-util = "0.3"
rand = "0.8"
anchor-lang = "0.31.0"