[package]
name = "on-chain-subscription-manager"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "on_chain_subscription_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
offchain = ["solana-client", "tokio", "dotenv", "serde_json", "solana-sdk/full"]

# Dependencies for on-chain (BPF)
[dependencies]
anchor-lang = "0.31.0"
solana-program = { version = "1.18.26", default-features = false } # Replace solana-sdk for BPF
bs58 = { version = "0.5", default-features = false }
base64 = { version = "0.22.1", default-features = false }
bincode = "1.3.3"

# Off-chain-only dependencies
solana-sdk = { version = "1.18.26", optional = true } # Full features for off-chain
solana-client = { version = "1.18.26", optional = true }
tokio = { version = "1.40.0", features = ["full"], optional = true }
dotenv = { version = "0.15.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
base64ct = "1.6.0"    # Pinned for rustc 1.79 compatibility
litemap = "0.7.3"     # Pinned for rustc 1.79 compatibility
zerofrom = "0.1.4"    # Pinned for rustc 1.79 compatibility

[[bin]]
name = "sign_message"
path = "src/bin/sign_message.rs"
required-features = ["offchain"]