[package]
name = "onchainsubscription-manager"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "onchainsubscription_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.0"
bs58 = "0.5"
solana-sdk = "1.18.26"
solana-client = "1.18.26"  # Add solana-client
serde_json = "1.0"
base64 = "0.22.1"         # Add base64
bincode = "1.3.3"         # Add bincode
tokio = { version = "1.40.0", features = ["full"] }
dotenv = "0.15.0"

[[bin]]
name = "sign_message"
path = "src/bin/sign_message.rs"

[[bin]]
name = "submit_transaction"
path = "src/bin/submit_transaction.rs"